--- a/Backend/login/loginapp/templates/loginapp/Html file/SignIn.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/SignIn.html
@@ -115,10 +115,10 @@
         </div>
       </nav>
 
-      <div class="log-header">
+      <!-- <div class="log-header">
         <h2>Log In</h2>
         <h3>Get news and more information</h3>
-      </div>
+      </div> -->
       <section class="FormCard my-4 mx-5">
         <div class="container">
           <div class="row no-gutters" style="border: 2px solid #090162">
