--- a/Backend/login/loginapp/templates/loginapp/Html file/Politics.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Politics.html
@@ -56,7 +56,7 @@
                 <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
               </li>
               <li class="nav-item">
-                <a href="./About.html" class="nav-link text-white">ABOUT US</a>
+                <a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -88,7 +88,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a href="./taxCalculator.html" class="nav-link text-white"
+                <a href="{% url 'Tax_calculator' %}" class="nav-link text-white"
                   >TAX CALCULATOR</a
                 >
               </li>
@@ -137,12 +137,13 @@
               {% endif %}
             </div>
             <div class="col-lg-7">
-              <p class="title">{{ post.title }}</p>
+              <a href="{% url 'article-detail' post.pk %}"><p class="title">{{ post.title }}</p></a>
               <div class="row ml-2">
                 <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
                 &nbsp;&nbsp;&nbsp;
                 <i class="fa fa-comment" aria-hidden="true"> 0 comments</i>
               </div>
+              {{ post.body|truncatewords:8 }}
             </div>
             <hr style="border: 1px solid grey; width: 98%" />
           </div>
@@ -250,49 +251,36 @@
       </div>
     </div>
     <!--Footer-->
-    <footer class="footer">
-      <div class="container">
-        <div class="row" style="margin-top: 25px">
-          <div class="col-lg-4 footer-content">
-            <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
-            <p>The english edition Online News</p>
-            <p>Phone No: 9856234124,014256352</p>
-            <p>taxcompany@gmail.com</p>
-          </div>
-          <div class="col-lg-4 footer-content">
-            <h6>News</h6>
-            <p>Politics</p>
-            <p>Entertainment</p>
-            <p>Sports</p>
-            <p>Business</p>
-          </div>
-          <div class="col-lg-4 footer-content">
-            <h6>You can also find us on</h6>
-            <div style="font-size: 35px; margin-left: 10px">
-              <i class="fa fa-facebook-official"></i>
-              &nbsp;&nbsp;
-              <i class="fa fa-instagram"></i>
-              &nbsp;&nbsp;
-              <i class="fa fa-twitter-square"></i>
-            </div>
-          </div>
-          <hr
-            class="mb-3"
-            style="
-              background-color: white;
-              border: 1px solid white;
-              width: 100%;
-              margin-left: 0;
-              margin-right: 0;
-            "
-          />
-          <div style="background-color: #090162; color: white; width: 100%">
-            <p style="text-align: center">
-              Copyright &copy; 2021 Tax Management System, All rights reserved
-            </p>
-          </div>
+    <div class="row footer" style="margin-top: 25px; background-color: #090162; color: white;">
+      <div class="col-lg-4 footer-content">
+        <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
+        <p>The english edition Online News</p>
+        <p>Phone No: 9856234124,014256352</p>
+        <p>taxcompany@gmail.com</p>
+      </div>
+      <div class="col-lg-4 footer-content">
+        <h6>News</h6>
+        <a href="{% url 'politics' %}"><p>Politics</p></a>
+        <a href="{% url 'entertainment' %}"><p>Entertainment</p></a>
+        <a href="{% url 'sports' %}"><p>Sports</p></a>
+        <a href="{% url 'business' %}"><p>Business</p></a>
+      </div>
+      <div class="col-lg-4 footer-content">
+        <h6>You can also find us on</h6>
+        <div style="font-size: 35px; margin-left: 10px">
+          <i class="fa fa-facebook-official"></i>
+          &nbsp;&nbsp;
+          <i class="fa fa-instagram"></i>
+          &nbsp;&nbsp;
+          <i class="fa fa-twitter-square"></i>
         </div>
       </div>
-    </footer>
+      <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+      <div style="background-color: #090162; color: white; width: 100%">
+        <p style="text-align: center">
+          Copyright &copy; 2021 Tax Management System, All rights reserved
+        </p>
+      </div>
+    </div>
   </body>
 </html>
