--- a/Backend/login/loginapp/templates/loginapp/Html file/blog.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/blog.html
@@ -24,60 +24,85 @@
     <body>
         <div class="header">
             <nav class="navbar navbar-expand-md navbar-dark navigation">
-                <div class="container">
-                    <a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
-                        <img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
-                    </a>
-    
-                    <button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
-                        <span class="navbar-toggler-icon">	
-                        </span>
-                    </button>
-                    <div class="collapse navbar-collapse text-center " id="collapsenavbar">
-                        <ul class="navbar-nav ml-auto mr-auto">
-                            <li class="nav-item"> 
-                                <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
-                            </li>
-                            <li class="nav-item"> 
-                                <a href="" class="nav-link text-white">ABOUT US</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
-                                    NEWS
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">
-                                        POLITICS
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">
-                                        ENTERTAINMENT
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">
-                                        BUSINESS
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">
-                                        SPORTS
-                                    </a>
-                                </div>
-                            </li>
-                            <li class="nav-item"> 
-                                <a href="pages/politics.html" class="nav-link text-white">TAX CALCULATOR</a>
-                            </li>
-                        </ul>
-                        <a href="{% url 'logout' %}" class="nav-link text-white">
-                            <button type="button" class="btn btn-primary btn-sm">Log out</button>
+              <div class="container">
+                <a
+                  href="{% url 'home' %}"
+                  class="navbar-brand text-warning font-weight-bold"
+                >
+                  <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
+                </a>
+      
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapsenavbar"
+                >
+                  <span class="navbar-toggler-icon"> </span>
+                </button>
+                <div class="collapse navbar-collapse text-center" id="collapsenavbar">
+                  <ul class="navbar-nav ml-auto mr-auto">
+                    <li class="nav-item">
+                      <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-toggle="dropdown"
+                        style="color: white"
+                      >
+                        NEWS
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'politics' %}">
+                          POLITICS
                         </a>
-                         <form class="d-flex">
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
-                          </form>
-                    </div>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'entertainment' %}">
+                          ENTERTAINMENT
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'business' %}">
+                          BUSINESS
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'sports' %}">
+                          SPORTS
+                        </a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'Tax_calculator' %}" class="nav-link text-white"
+                        >TAX CALCULATOR</a
+                      >
+                    </li>
+                  </ul>
+                  <a href="{% url 'logout' %}" class="nav-link text-white">
+                    <button type="button" class="btn btn-primary btn-sm">
+                      Logout
+                    </button>
+                  </a>
+                  <form class="d-flex">
+                    <input
+                      class="form-control"
+                      type="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-outline-success btn-sm ml-2" type="submit">
+                      Search
+                    </button>
+                  </form>
                 </div>
+              </div>
             </nav>
-        </div>
+          </div>
 
         <div class = "news-body">
             <div class="news_container px-4">
@@ -87,7 +112,7 @@
                         <div class="row">
                                 <img src="{% static 'Images/boy.jpg' %}" alt="..." width="50" height="50" class="mr-3 my-4 rounded-circle img-thumbnail shadow-sm" style="margin-left: 16px;">
                                 <div>
-                                    <h5 class="author_name">{{ post.auth.username }}</h5>
+                                    <h5 class="author_name">admin</h5>
                                     <h6 style="font-size: 12px;">15 April 2021</h6>
                                 </div>
                                 <div  class= "icons">
@@ -104,7 +129,7 @@
                         <img src="{% static 'Images/icon-image.png' %}" class="img">
                         {% endif %} 
                         
-                        <h5 style="font-style: italic; font-size: 12px; text-align: center; margin-top: 5px;">Covid Vaccine Image</h5>
+                        <h5 style="font-style: italic; font-size: 12px; text-align: center; margin-top: 5px;">{{ post.title }}</h5>
                         <hr>
                         <p class="news_body">{{ post.body }}</p>
                         <!-- <p class="news_body">KATHMANDU, April 15: Nepal has postponed the vaccination campaign against COVID-19 for the time
@@ -128,7 +153,7 @@
                         <div class="row">
                             <img src="{% static 'Images/boy.jpg' %}" alt="..." width="70" height="50" class="mr-3 rounded-circle img-thumbnail shadow-sm" style="margin-left: 16px;">
                             <div>
-                                <h5 class="author_name">{{ post.auth.username }}</h5>
+                                <h5 class="author_name">admin</h5>
                                 <h6 style="font-size: 12px;">15 April 2021</h6>
                             </div>
                             <div  class= "icons">
@@ -231,34 +256,37 @@
                 </div>
             </div>
             <!--Footer-->
-            <div class="row footer" style="margin-top: 25px;">
+            <div class="row footer" style="margin-top: 25px; background-color: #090162; color: white;">
                 <div class="col-lg-4 footer-content">
-                    <img src ="{% static 'Images/logo1.png' %}" class="navbar-logo">
-                    <p>The english edition Online News</p>
-                    <p>Phone No: 9856234124,014256352</p>
-                    <p>taxcompany@gmail.com</p>
-                </div>
-                <div class="col-lg-4 footer-content">
-                    <h6>News</h6>
-                    <p>Politics</p>
-                    <p>Entertainment</p>
-                    <p>Sports</p>
-                    <p>Business</p>
+                  <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
+                  <p>The english edition Online News</p>
+                  <p>Phone No: 9856234124,014256352</p>
+                  <p>taxcompany@gmail.com</p>
                 </div>
                 <div class="col-lg-4 footer-content">
-                    <h6>You can also find us on</h6>
-                    <div style="font-size: 35px; margin-left: 10px;">
-                        <i class="fa fa-facebook-official"></i>
-                        &nbsp;&nbsp;
-                        <i class="fa fa-instagram"></i>
-                        &nbsp;&nbsp;
-                        <i class="fa fa-twitter-square"></i>
-                    </div>
+                  <h6>News</h6>
+                  <a href="{% url 'politics' %}"><p>Politics</p></a>
+                  <a href="{% url 'entertainment' %}"><p>Entertainment</p></a>
+                  <a href="{% url 'sports' %}"><p>Sports</p></a>
+                  <a href="{% url 'business' %}"><p>Business</p></a>
                 </div>
-                <div style="background-color: #090162; color: white;width: 100%;">
-                    <p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
+                <div class="col-lg-4 footer-content">
+                  <h6>You can also find us on</h6>
+                  <div style="font-size: 35px; margin-left: 10px">
+                    <i class="fa fa-facebook-official"></i>
+                    &nbsp;&nbsp;
+                    <i class="fa fa-instagram"></i>
+                    &nbsp;&nbsp;
+                    <i class="fa fa-twitter-square"></i>
+                  </div>
                 </div>
-            </div>
+                <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+                <div style="background-color: #090162; color: white; width: 100%">
+                  <p style="text-align: center">
+                    Copyright &copy; 2021 Tax Management System, All rights reserved
+                  </p>
+                </div>
+              </div>
         </div>
     </body>
 </html>
