--- a/Backend/login/loginapp/templates/loginapp/Html file/taxCalculator.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/taxCalculator.html
@@ -35,62 +35,87 @@
     </head>
         <body>
             <!--navigation bar-->
-        <div class="header">
+            <div class="header">
                 <nav class="navbar navbar-expand-md navbar-dark navigation">
-                    <div class="container">
-                        <a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold">
-                            <img class="navbar-logo" src="{% static 'Image/logo1.png' %}">
+                  <div class="container">
+                    <a
+                      href="{% url 'home' %}"
+                      class="navbar-brand text-warning font-weight-bold"
+                    >
+                      <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
                     </a>
-
-                            <button class="navbar-toggler type=" button" data-toggle="collapse" data-target="#collapsenavbar">
-                        <span class="navbar-toggler-icon">
-                            </span>
+          
+                    <button
+                      class="navbar-toggler"
+                      type="button"
+                      data-toggle="collapse"
+                      data-target="#collapsenavbar"
+                    >
+                      <span class="navbar-toggler-icon"> </span>
                     </button>
-                        <div class="collapse navbar-collapse text-center " id="collapsenavbar">
-                            <ul class="navbar-nav ml-auto mr-auto">
-                                <li class="nav-item">
-                                    <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="" class="nav-link text-white">ABOUT US</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
-                                        NEWS
-                                </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">
-                                            POLITICS
-                                    </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">
-                                            ENTERTAINMENT
-                                    </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">
-                                            BUSINESS
-                                    </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">
-                                            SPORTS
-                                    </a>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/politics.html" class="nav-link text-white">TAX CALCULATOR</a>
-                                </li>
-                            </ul>
-                            <a href="{% url 'register' %}" class="nav-link text-white">
-                                <button type="button" class="btn btn-primary btn-sm">Sign-in</button>
+                    <div class="collapse navbar-collapse text-center" id="collapsenavbar">
+                      <ul class="navbar-nav ml-auto mr-auto">
+                        <li class="nav-item">
+                          <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            style="color: white"
+                          >
+                            NEWS
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'politics' %}">
+                              POLITICS
                             </a>
-                            <form class="d-flex mt-3">
-                                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                                    <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
-                          </form>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'entertainment' %}">
+                              ENTERTAINMENT
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'business' %}">
+                              BUSINESS
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'sports' %}">
+                              SPORTS
+                            </a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'Tax_calculator' %}" class="nav-link text-white"
+                            >TAX CALCULATOR</a
+                          >
+                        </li>
+                      </ul>
+                      <a href="{% url 'logout' %}" class="nav-link text-white">
+                        <button type="button" class="btn btn-primary btn-sm">
+                          Logout
+                        </button>
+                      </a>
+                      <form class="d-flex">
+                        <input
+                          class="form-control"
+                          type="search"
+                          placeholder="Search"
+                          aria-label="Search"
+                        />
+                        <button class="btn btn-outline-success btn-sm ml-2" type="submit">
+                          Search
+                        </button>
+                      </form>
                     </div>
-                        </div>
-            </nav>
-        </div>
+                  </div>
+                </nav>
+              </div>
                 <h3 class="text-center mt-4 mb-4">SALARY TAX CALCULATOR</h3>
                 <div class="container">
                     <form name="myform" class="form-group" id="form">
@@ -268,11 +293,10 @@
                    </div>
                                                                                 <div class="col-lg-4 footer-content">
                                                                                     <h6>News</h6>
-                                                                                    <p>Politics</p>
-                                                                                    <p>Entertainment</p>
-                                                                                    <p>Sports</p>
-                                                                                    <p>Business</p>
-                                                                                </div>
+                                                                                    <a href="{% url 'politics' %}"><p>Politics</p></a>
+                                                                                    <a href="{% url 'entertainment' %}"><p>Entertainment</p></a>
+                                                                                    <a href="{% url 'sports' %}"><p>Sports</p></a>
+                                                                                    <a href="{% url 'business' %}"><p>Business</p></a>                                                                                </div>
                                                                                 <div class="col-lg-4 footer-content">
                                                                                     <h6>You can also find us on</h6>
                                                                                     <div style="font-size: 35px; margin-left: 10px;">
